docs: 라벨 사용법 작성 #1

--- a/깃프로젝트가이드.md
+++ b/깃프로젝트가이드.md
@@ -1,12 +1,21 @@
-## 깃허브 프로젝트 관리
+# 깃허브 프로젝트 관리
 
-1. Issue : 작업 단계별 업무와 서브업무를 관리
-2. Label : Issue에 Label을 추가하여 Issue를 카테고리별로 관리
-2. Milestone : Issues를 그룹핑하여 전체적인 진행상황 추적
-4. Project : Issue를 진행상태에 따라 구분하여 프로젝트 관리
+1. Issues : 작업 단계별 업무와 서브업무 관리
+2. Labels : 태그 느낌, 이슈 구분
+2. Milestones : 개발 목표일(마감일) 관리
+4. Projects : 전반적인 진행 현황 관리
 
-## Issue
-![issue](img/issues.png)
+## Issues
+![issue](img/issue1.png)
 - 작업 단계별 업무정의
 - 체크리스트 작성
+![issue2](img/issue2.png)
 - 커밋할때 끝부분에 Issue 태그를 붙이면, 자동으로 커밋이 해당 Issue로 분류
+```
+git commit -m "docs: 이슈 사용법 작성 #1"
+```
+
+## Labels
+![label1](img/label1.png)
+- 작업단계 TASK1의 유형은 RECORD
+- 협업 하면서 이슈가 많아졌을 때, 어떤 작업단계에 대한 이슈이고, 이슈 유형을 구분
