docs: 마일스톤 사용법 작성 #1

--- a/깃프로젝트가이드.md
+++ b/깃프로젝트가이드.md
@@ -1,8 +1,8 @@
 # 깃허브 프로젝트 관리
 
-1. Issues : 작업 단계별 업무와 서브업무 관리
+1. Issues : 작업 단계별 업무와 서브업무 작성
 2. Labels : 태그 느낌, 이슈 구분
-2. Milestones : 개발 목표일(마감일) 관리
+2. Milestones : 개발 목표일(마감일) 지정
 4. Projects : 전반적인 진행 현황 관리
 
 ## Issues
@@ -19,3 +19,7 @@ git commit -m "docs: 이슈 사용법 작성 #1"
 ![label1](img/label1.png)
 - 작업단계 TASK1의 유형은 RECORD
 - 협업 하면서 이슈가 많아졌을 때, 어떤 작업단계에 대한 이슈이고, 이슈 유형을 구분
+
+## Milestones
+![milestone1](img/milestone1.png)
+- 작업 단계별 목표일을 설정하여 해당 작업에 속하는 이슈 관리 
