docs: 프로젝트 사용법 작성 #1

--- a/깃프로젝트가이드.md
+++ b/깃프로젝트가이드.md
@@ -23,3 +23,8 @@ git commit -m "docs: 이슈 사용법 작성 #1"
 ## Milestones
 ![milestone1](img/milestone1.png)
 - 작업 단계별 목표일을 설정하여 해당 작업에 속하는 이슈 관리 
+
+## Projects
+![project1](img/project1.png)
+- 프로젝트 추가시 Basic Kanban 템플릿 생성 및 Issue 연결
+- 전반적인 작업 진척도 체킹
