--- a/깃허브기능/깃허브프로젝트관리기능.md
+++ b/깃허브기능/깃허브프로젝트관리기능.md
@@ -8,32 +8,33 @@
 <br>
 
 ## Issues
-> ![issue](img/issue1.png)
+> ![issue](../img/issue1.png)
 > - 제목: 작업 단계별 업무정의
 > - 내용: 체크리스트 작성
 
 <br>
 
-> ![issue2](img/issue2.png)
+> ![issue2](../img/issue2.png)
 > - 커밋할때 끝부분에 Issue 태그를 붙이면, 자동으로 커밋이 해당 Issue로 분류
 > - ```git commit -m "docs: 이슈 사용법 작성 #1"```
 
 <br><br>
 
 ## Labels
-> ![label1](img/label1.png)
+> ![label1](../img/label1.png)
 > - 작업단계 `TASK1`의 유형은 `RECORD`
 > - 협업 하면서 이슈가 많아졌을 때, 어떤 작업단계에 대한 이슈이고, 이슈 유형을 구분
 
 <br><br>
 
 ## Milestones
-> ![milestone1](img/milestone1.png)
+> ![milestone1](../img/milestone1.png)
 > - 작업 단계별 목표일을 설정하여 해당 작업에 속하는 이슈 관리 
 
 <br><br>
 
 ## Projects
-> ![project1](img/project1.png)
+> ![project1](../img/project1.png)
 > - 프로젝트 추가시 Basic Kanban 템플릿 생성 및 Issue 연결
 > - 전반적인 작업 진척도 체킹
+
